[tool.poetry]
name = "dh-auth"
version = "0.1.0"
description = ""
authors = ["JohnSoi <un.perso@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.3"
dh-base = {git = "https://github.com/JohnSoi/dh-base.git"}
passlib = "^1.7.4"
python-jose = "^3.3.0"
sqlalchemy = "^2.0.36"
celery = "^5.4.0"
dh-user = {git = "https://github.com/JohnSoi/dh-user.git"}


[tool.poetry.group.dev.dependencies]
setuptools = "^75.2.0"
pyright = "^1.1.386"
black = "^24.10.0"

[tool.isort]
profile="black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
length_sort = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
